Uptaded the project's components